# CS_3A

./: README.md
Exercises/: CMakeLists.txt
Exercises/09-08-2020/: const1.cpp  struct1.cpp
Exercises/09-10-2020/: CMakeLists.txt  class1.cpp  pointers.cpp
Exercises/09-15-2020/: string1.cpp
Exercises/09-17-2020/: Makefile  class1.cpp  class2.cpp
Exercises/09-22-2020/: color.cpp  color.h  color1.cpp
Exercises/09-24-2020/: color.cpp  color.h  color1.cpp
Exercises/09-29-2020/: Makefile  color.cpp  color.h  color1.cpp
Exercises/10-01-2020/: Makefile  char1.cpp  color.cpp  color.h  color1.cpp  student.cpp  student.h  student1.cpp
Exercises/10-06-2020/: Makefile  new1.cpp  new2.cpp
Exercises/10-08-2020/: Makefile  namespace1.cpp  namespace2.cpp  namespace3.cpp
Exercises/10-13-2020/: list.cpp  list.h  list1.cpp
Exercises/10-15-2020/: Makefile  list.cpp  list1.cpp
Exercises/10-20-2020/: list.cpp  list.h  list1.cpp
Exercises/10-22-2020/: rec1.cpp
Exercises/10-27-2020/: rec1.cpp
Exercises/10-29-2020/: Makefile  class1.cpp  class2.cpp  class3.cpp
Exercises/11-03-2020/: Makefile  class1.cpp  class2.cpp  except2.cpp
Exercises/11-05-2020/: Makefile  except1.cpp  except2.cpp  except3.cpp
Exercises/11-10-2020/: Makefile  template1.cpp
Exercises/11-17-2020/: Makefile  iter1.cpp  iter2.cpp  map1.cpp
Exercises/11-19-2020/: Makefile
